# modelops-bundles

./: .envrc  .gitignore  Makefile  README.md  agent_test_suite_alignment.md  modelops-bundles-design.md  modelops-bundles-mediatypes-impl-plan.md  modelops-bundles-review.md  modelops_bundles_supplement.md  oras-py-analysis.md  pyproject.toml  roadmap.md  tmp.39PllPGi83.tar  tmp.39PllPGi83.tar.zst  tmp.EQQ6BtTipa.tar.zst
.claude/: settings.local.json
dev/: README.md  dev.env  docker-compose.yml  registry-config.yml  test-cli-fake.sh  test-round-trip.sh  test-storage-real.sh
dev/test-bundles/: README.md
dev/test-bundles/azure-bundle/: modelops.yaml
dev/test-bundles/large-bundle/: modelops.yaml
dev/test-bundles/simple-bundle/: modelops.yaml
src/modelops_bundles/: __init__.py  cli.py  cli_context.py  export.py  models.py  path_safety.py  planner.py  pointer_writer.py  publisher.py  runtime.py  runtime_types.py  settings.py
src/modelops_bundles/operations/: __init__.py  facade.py  mappers.py  printers.py
src/modelops_bundles/providers/: __init__.py  bundle_content.py  oras_external.py
src/modelops_bundles/storage/: README.md  __init__.py  base.py  hybrid_oci_registry.py  object_store.py  oci_errors.py  oci_media_types.py  oci_registry.py  oras.py  oras_bundle_registry.py  registry_factory.py  registry_http.py  repo_path.py  resolve_oci.py  uri.py
src/modelops_bundles/test/: __init__.py
tests/: __init__.py  conftest.py  fake_provider.py  test_bundle_features.py  test_cli_parsing.py  test_cli_smoke.py  test_error_mapping.py  test_export_determinism.py  test_operations_facade.py  test_path_safety.py  test_prefetch_integrity.py  test_provenance.py  test_provider_helpers.py  test_push_command.py  test_registry_fixture.py  test_runtime.py  test_runtime_types.py  test_settings.py
tests/e2e/: __init__.py
tests/fakes/: fake_provider.py
tests/fixtures/: __init__.py  oci_registry.py
tests/helpers/: __init__.py  oci_helpers.py  seed.py
tests/integration/: test_runtime_with_oras_external.py
tests/providers/: __init__.py  test_bundle_content_provider.py  test_oras_external_provider.py
tests/storage/: __init__.py  test_fakes.py  test_object_adapter_contract.py  test_object_adapter_simple.py  test_oras_adapter_simple.py  test_oras_basic.py  test_oras_bundle_registry.py  test_uri_parsing.py
(+17 files in other folders)
