[project]
name = "modelops-bundles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.14",
    "modelops-contracts",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "testcontainers[registry]>=4.12.0",
    "typer>=0.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "oras>=0.2.37",
]

[tool.uv.sources]
modelops-contracts = { path = "../modelops-contracts" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["modelops_bundles.storage.fakes*"]
