[project]
name = "modelops-bundles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.14",
    "modelops-contracts",
    "oras>=0.2.37",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "testcontainers[registry]>=4.12.0",
    "typer>=0.16.1",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "azure-storage-blob>=12.26.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
modelops-contracts = { path = "../modelops-contracts", editable = true }

[project.scripts]
modelops-bundles = "modelops_bundles.cli:main"

[tool.hatch.build]
exclude = [
    "*.pyc", 
    "__pycache__",
    "/tests"
]
